--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,12 +3,22 @@
 @tailwind utilities;
 
 @layer components {
-    .link{
-        @apply cursor-pointer hover:underline;
-    }
-    .button{
-        @apply p-2 text-xs md:text-sm bg-gradient-to-b 
+  .link {
+    @apply cursor-pointer hover:underline;
+  }
+  .button {
+    @apply p-2 text-xs md:text-sm bg-gradient-to-b 
         from-yellow-200 to-yellow-400 border border-yellow-300 rounded-sm focus:ring-2 
         focus:outline-none focus:ring-yellow-500 active:from-yellow-500;
-    }
+  }
+  .header-top {
+    position: fixed;
+    width: 100%;
+    z-index:99;
+  }
+  .header-second-top {
+    width: 100%;
+    z-index:90;
+    padding-top: 70px!important;
+  }
 }
